# OppsRoute360

./: .gitignore  README.md
server/: pyproject.toml
server/app/: main.py
server/app/api/: router.py
server/app/api/endpoints/: auth.py  user.py
server/app/core/: config.py  security.py
server/app/crud/: user.py
server/app/database/: db_session.py
server/app/dependencies/: auth_dependency.py
server/app/models/: base_model.py  user.py
server/app/schemas/: user.py
